objects/Case.object
<CustomObject>
    <fields>
        <fullName>Contract_Other__c</fullName>
        <description>To be used for Cases with Type Invoicing</description>
        <label>Contract Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>To be used for Cases with Type Invoice</description>
        <inlineHelpText>Where the agreement is located.</inlineHelpText>
        <label>Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_To_Sale__c</fullName>
        <inlineHelpText>Please indicate if your interaction with the customer resulted in a sale (new course registration) or not.</inlineHelpText>
        <label>Converted To Sale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copy_Billing_to_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Billing to Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correct_Discount_Amount_Cur__c</fullName>
        <description>Amount of discount that should be applied to the invoice</description>
        <inlineHelpText>Amount of discount that should be applied to the invoice</inlineHelpText>
        <label>Correct Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Correct_Discount_Amount__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>Amount of discount that should be applied to the invoice.</inlineHelpText>
        <label>Correct Discount Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Invoice__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>Invoice where payment SHOULD be applied.</inlineHelpText>
        <label>Correct Invoice</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Number_of_Students__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>The number of students the customer indicates was trained.</inlineHelpText>
        <label>Correct # of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Correct_Organization__c</fullName>
        <description>This field will be required to be filled out before case is closed and Case Invoice Sub-Type is Wrong Organization</description>
        <label>Correct Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Price_per_Student__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>The amount the customer believes they should be charged, verify from agreement.</inlineHelpText>
        <label>Correct Price per Student</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Format__c</fullName>
        <label>Course Format</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Blended</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Reg_Reason__c</fullName>
        <label>Course Reg Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Number of Learners</fullName>
                </value>
                <value>
                    <fullName>Offering Change</fullName>
                </value>
                <value>
                    <fullName>Instructor Issue</fullName>
                </value>
                <value>
                    <fullName>Facility Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Requested__c</fullName>
        <label>Course Requested</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adult &amp; Ped CPR/AED</fullName>
                </value>
                <value>
                    <fullName>Adult &amp;Ped FA/CPR/AED</fullName>
                </value>
                <value>
                    <fullName>Adult CPR/AED</fullName>
                </value>
                <value>
                    <fullName>Adult FA/CPR/AED</fullName>
                </value>
                <value>
                    <fullName>Babysitters Training</fullName>
                </value>
                <value>
                    <fullName>BLS</fullName>
                </value>
                <value>
                    <fullName>CPR/AED for Prof Rescuers &amp; Heath Care</fullName>
                </value>
                <value>
                    <fullName>CPR/AED for Prof Rescuers &amp; Heath Care Review</fullName>
                </value>
                <value>
                    <fullName>FA/CPR/AED Instructor</fullName>
                </value>
                <value>
                    <fullName>Instructor Bridge</fullName>
                </value>
                <value>
                    <fullName>Lifeguarding</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_SID__c</fullName>
        <label>Course SID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Value__c</fullName>
        <label>Course Value</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tertiary_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>More than $100</fullName>
                </value>
                <value>
                    <fullName>Less than $100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_From_Capo_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created From Capo Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Discount_Amount_Cur__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>Amount of any discount applied to invoice.</inlineHelpText>
        <label>Current Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Discount_Amount__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>Amount of any discount applied to invoice.</inlineHelpText>
        <label>Current Discount Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Invoice__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>Invoice where payment HAS BEEN applied.</inlineHelpText>
        <label>Current Invoice</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Order_Amount__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>The amount of the invoice in question.</inlineHelpText>
        <label>Current Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Site_Name_Series__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Site Name Series</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_First_name__c</fullName>
        <label>Customer First name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Follow_Up_Timestamp__c</fullName>
        <description>Social Care: Date/Time that the customer responds and status is set to &apos;Customer Follow Up&apos;</description>
        <label>Customer Follow Up Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <description>To be used in Service Cases with Type Invoicing. (LMS Org ID)</description>
        <inlineHelpText>Enter LMS Organization ID - required if Delivery Channel is Training.</inlineHelpText>
        <label>LMS Org ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Last_name__c</fullName>
        <label>Customer Last name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Notification_Sent_On_API_del__c</fullName>
        <description>Time stamp indicating when customer notification was sent to the customer. Field will be updated from a workflow rule.</description>
        <inlineHelpText>Time stamp indicating when customer notification was sent to the customer.</inlineHelpText>
        <label>Customer Notification Sent On API</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Notification_Sent_del__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This check box is checked automatically to indicate that an email has been sent to the customer when invoicing case has been moved to the queue Ready to Close.</inlineHelpText>
        <label>Customer Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Notified_of_Resolution_On_API__c</fullName>
        <description>This field will be updated by workflow when Customer Notified of Resolution check box is checked. Field will be hidden from page layout and a formula field will be exposed to mirror this field so users cannot update the field manually.</description>
        <label>Customer Notified of Resolution On (API)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Notified_of_Resolution_On__c</fullName>
        <formula>Customer_Notified_of_Resolution_On_API__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Notified of Resolution On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Notified_of_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box once customer has been notified. Date and time will be recorded below.</inlineHelpText>
        <label>Customer Notified of Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D2_sub_D1__c</fullName>
        <description>This formula is used in the Case Duration field formula</description>
        <formula>Now() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D2 sub D1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D4_sub_D3__c</fullName>
        <description>This formula is used to calculate the value for TIme until follow up</description>
        <formula>Follow_up_Date_Time__c - Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D4 sub D3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <label>Day of the Week</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Weekday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Any Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Channel__c</fullName>
        <formula>IF(ISBLANK(Account.PHSS_Channel__c),NULL, 
SUBSTITUTE( 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;AED&quot;),&quot;AED,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;Authorized Provider&quot;),&quot;Authorized Provider,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;Business Client&quot;),&quot;Business Client,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;CEP Agency&quot;),&quot;CEP Agency,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;Full Service&quot;),&quot;Full Service,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;Licensed Training Provider&quot;),&quot;Licensed Training Provider,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;NAT Agency&quot;),&quot;NAT Agency,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;National Account Network&quot;),&quot;National Account Network,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;RCS Distributor&quot;),&quot;RCS Distributor,&quot;,NULL)+ 
IF(INCLUDES(Account.PHSS_Channel__c,&quot;RCS Retail&quot;),&quot;RCS Retail,&quot;,NULL)+&quot;.&quot;,&quot;,.&quot;,NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_Delivery_Channel__c</fullName>
        <label>Details of Delivery Channel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disaster__c</fullName>
        <label>Disaster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hurricane Harvey</fullName>
                </value>
                <value>
                    <fullName>Hurricane Irma</fullName>
                </value>
                <value>
                    <fullName>Hurricane Maria</fullName>
                </value>
                <value>
                    <fullName>Hurricane Florence</fullName>
                </value>
                <value>
                    <fullName>Hurricane Michael</fullName>
                </value>
                <value>
                    <fullName>California Wildfires</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispute_Issue__c</fullName>
        <description>Depends on Service Case Type - Invoicing. Second case sub type.</description>
        <inlineHelpText>Select the main reason the customer is calling.</inlineHelpText>
        <label>Invoice Case Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ACH Detail</fullName>
                </value>
                <value>
                    <fullName>ACH Request</fullName>
                </value>
                <value>
                    <fullName>AR Exception</fullName>
                </value>
                <value>
                    <fullName>Bad Address</fullName>
                </value>
                <value>
                    <fullName>Billed To Chapter</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Customer Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Customer Service Credit</fullName>
                </value>
                <value>
                    <fullName>Duplicate Invoice</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>Invoice Delivery Method</fullName>
                </value>
                <value>
                    <fullName>Invoice Payments</fullName>
                </value>
                <value>
                    <fullName>Invoice Presentation</fullName>
                </value>
                <value>
                    <fullName>Request Invoicing Privileges</fullName>
                    <label>Invoicing Privileges</label>
                </value>
                <value>
                    <fullName>Manual Billing Request</fullName>
                </value>
                <value>
                    <fullName>Misapplied Payment</fullName>
                </value>
                <value>
                    <fullName>Misdirected Deposit</fullName>
                </value>
                <value>
                    <fullName>Missing Payment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pay Invoice</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Refund Credit Balance</fullName>
                </value>
                <value>
                    <fullName>Request Copy of Statement/Invoice</fullName>
                    <label>Request Billing Docs</label>
                </value>
                <value>
                    <fullName>Retail Collections</fullName>
                </value>
                <value>
                    <fullName>Special Invoicing</fullName>
                </value>
                <value>
                    <fullName>Vendor Forms</fullName>
                </value>
                <value>
                    <fullName>Wrong Organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>Division associated to the customer.</inlineHelpText>
        <label>Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Invoice__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>Req’d field for Duplicate Sub Type. Enter Invoice # on the duplicate invoice (per customer).</inlineHelpText>
        <label>Duplicate Invoice #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Order__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>Req’d field for Duplicate Sub Type. Enter Order # on the duplicate invoice (per customer).</inlineHelpText>
        <label>Duplicate Order #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Sending_to_CFS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error Sending to CFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalate_To_Sales_Director__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this checkbox to escalate this case to the Sales Director.</inlineHelpText>
        <label>Escalate To SD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalate_to_SDD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this checkbox to escalate this case to the service delivery director.</inlineHelpText>
        <label>Escalate to SDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_LOGIN_EMAIL__c</fullName>
        <label>Red Cross Store email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Feedback_Individual_Name__c</fullName>
        <inlineHelpText>Who was the customer feedback regarding?</inlineHelpText>
        <label>Feedback Individual Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_ARC_Response_Date_Time__c</fullName>
        <description>Social Care: Response time of first ARC agent to address the case</description>
        <label>First ARC Response Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Call_Resolution__c</fullName>
        <description>This field is to assist with the readability for reports and dashboards. It will not be visible for page layouts.</description>
        <formula>IF( IsClosedOnCreate , &quot;First Call Resolution&quot;, &quot;Follow Up Resolution&quot;)</formula>
        <label>First Call Resolution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Customer_Post_Date_Time__c</fullName>
        <description>Social Care: First customer post timestamp</description>
        <formula>CreatedDate</formula>
        <label>First Customer Post Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response_Time_minutes__c</fullName>
        <description>First Response Time (minutes)</description>
        <inlineHelpText>First Response Time (minutes)</inlineHelpText>
        <label>First Response Time (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Attempts__c</fullName>
        <label>Follow Up Attempts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Group__c</fullName>
        <label>Follow Up Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARC Management Escalations</fullName>
                </value>
                <value>
                    <fullName>ARC Support Team</fullName>
                </value>
                <value>
                    <fullName>ATG - On Hold</fullName>
                </value>
                <value>
                    <fullName>CCO Specialist</fullName>
                </value>
                <value>
                    <fullName>CEP</fullName>
                </value>
                <value>
                    <fullName>Certificate Support</fullName>
                </value>
                <value>
                    <fullName>Course Records</fullName>
                </value>
                <value>
                    <fullName>Credit Card Payments</fullName>
                </value>
                <value>
                    <fullName>CST Queue</fullName>
                </value>
                <value>
                    <fullName>Current User</fullName>
                </value>
                <value>
                    <fullName>Digital Certificate Escalation</fullName>
                </value>
                <value>
                    <fullName>Instructor Support</fullName>
                </value>
                <value>
                    <fullName>Instructor Updates</fullName>
                </value>
                <value>
                    <fullName>NAT - Refunds</fullName>
                </value>
                <value>
                    <fullName>New Instructors Corner</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>On Hold - Community Learner Registration</fullName>
                </value>
                <value>
                    <fullName>On Hold - CST</fullName>
                </value>
                <value>
                    <fullName>Open BL Offerings</fullName>
                </value>
                <value>
                    <fullName>Outbound Group Queue</fullName>
                </value>
                <value>
                    <fullName>Payment Policy</fullName>
                </value>
                <value>
                    <fullName>Pending Field Request</fullName>
                </value>
                <value>
                    <fullName>Problem Records</fullName>
                </value>
                <value>
                    <fullName>Quick Start</fullName>
                </value>
                <value>
                    <fullName>RDC Queue</fullName>
                </value>
                <value>
                    <fullName>Red Cross Store</fullName>
                </value>
                <value>
                    <fullName>Registration Support Queue</fullName>
                </value>
                <value>
                    <fullName>Registration Support Queue - On Hold</fullName>
                </value>
                <value>
                    <fullName>TSC CEP - Sponsored</fullName>
                </value>
                <value>
                    <fullName>TSC NAT - Inquiries</fullName>
                    <label>TSC NAT/CEP - Inquiries</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Reason__c</fullName>
        <label>Follow Up Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card not handy</fullName>
                </value>
                <value>
                    <fullName>Funds not available</fullName>
                </value>
                <value>
                    <fullName>Need approval (employer, family mbr, other)</fullName>
                </value>
                <value>
                    <fullName>Need to check schedule</fullName>
                </value>
                <value>
                    <fullName>Need to verify type of class cancedlled</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unable to Reach Contact</fullName>
                </value>
                <value>
                    <fullName>Window shopping - Not ready to buy</fullName>
                </value>
                <value>
                    <fullName>Group Sales Follow Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up_Date_Time__c</fullName>
        <inlineHelpText>When does the customer request follow up  ?</inlineHelpText>
        <label>Follow up Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_up_Method__c</fullName>
        <label>Follow up Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Follow_Up_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>See Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up_Notes__c</fullName>
        <label>Follow up Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Correct_Account__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>Account where payment SHOULD be applied.</inlineHelpText>
        <label>CFS Correct Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Current_Account__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>Account where payment HAS BEEN applied.</inlineHelpText>
        <label>CFS Current Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Payment_Number__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>CFS payment number (begins with PMT).</inlineHelpText>
        <label>CFS Payment #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ghost_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this case created by an agent logging a ghost call via the &quot;log ghost call&quot; button on the &quot;Search For A Customer&quot; page?</description>
        <label>Ghost Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Since_Last_Modified__c</fullName>
        <formula>(NOW() - Last_Case_Update_Time_Date__c  ) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field displays the time that has passed since a case has been edited, a new case comment has been added, or a email has been sent or received.</inlineHelpText>
        <label>Hours Since Last Modified</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_Article_Number__c</fullName>
        <label>Information Station Article Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Queue_Date_Time__c</fullName>
        <description>Social Care: Field to indicate when a case pops back into the social queue</description>
        <label>In Queue Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_Case_Sub_Type__c</fullName>
        <description>Sub Type specifically for the Invoice Case Type</description>
        <inlineHelpText>Select Training or Product delivery method.</inlineHelpText>
        <label>Delivery Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized Provider</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Licensed Training Provider</fullName>
                </value>
                <value>
                    <fullName>Medical Testing (CEP)</fullName>
                </value>
                <value>
                    <fullName>National Account - AP</fullName>
                </value>
                <value>
                    <fullName>National Account - FS</fullName>
                </value>
                <value>
                    <fullName>Medical Training</fullName>
                    <label>Nurse Assistant Training</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                    <label>RCS Product</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Delivery__c</fullName>
        <label>Invoice Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>The invoice number. Used for Service Cases of Type Invoice.</description>
        <inlineHelpText>Invoice(s) related to inquiry. Use N/A if invoice not produced or Not Applicable.</inlineHelpText>
        <label>Invoice #</label>
        <type>TextArea</type>
    </fields>
</CustomObject>